Working RL for red robot only

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\LionHeart\\Anaconda2\\envs\\FRC-RL\\python.exe"
+    "python.pythonPath": "C:\\Users\\LionHeart\\Anaconda2\\envs\\FRC-RL\\python.exe",
+    "python.dataScience.jupyterServerURI": "local"
 }
